# ip-checker

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  sonar-project.properties
.github/workflows/: build-and-publish.yml  sonarqube.yml
src/ip_checker/: __main__.py  config.py  ip_checker.py
src/ip_checker/notifications/: gotify_notification.py  notification.py  notification_channel.py  smtp_notification.py  telegram_notification.py  webhook_notification.py
